<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audio Encoder</string>
    <string name="action_settings">Settings</string>
    <string name="radio_single_file">Single file</string>
    <string name="radio_batch">Batch</string>
    <string name="processing_mode">Processing mode:</string>
    <string name="input_file">Input:</string>
    <string name="output_file">Output:</string>
    <string name="input_file_hint">Input file path</string>
    <string name="output_file_hint">Output file path</string>
    <string name="input_browser_description">Browse for input path</string>
    <string name="output_browser_description">Browse for output path</string>
    <string name="output_format">Format:</string>
    <string name="radio_vbr">VBR</string>
    <string name="radio_cbr">CBR</string>
    <string name="radio_abr">ABR</string>
    <string name="mode">Mode:</string>
    <string name="bitrate_low">Small file, low quality</string>
    <string name="bitrate_high">Large file, high quality</string>
    <string name="algorithm_quality">Algorithm quality:</string>
	<string name="algorithm_low">Fast encode, low quality</string>
    <string name="algorithm_high">Slow encode, high quality</string>
    <string name="audio_sample_rate">Sample rate:</string>
    <string name="audio_channels">Channels:</string>
    <string name="button_encode">Encode</string>
    <string name="encode_cancel_description">Cancel current encoding operation</string>
    <string name="coding_method">Coding method:</string>
	<string name="compression_level">Compression level:</string>
	<string name="compression_high">Highest compression, slow</string>
	<string name="compression_low">Lowest compression, fast</string>
	<string name="bit_depth">Bit depth:</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_delete_intermediate_checkbox_preference">Delete incomplete files</string>
    <string name="summary_delete_intermediate_checkbox_preference">Remove partial files if cancelled or error occurs</string>
    <string name="title_tilt_lock_checkbox_preference">Tilt lock</string>
    <string name="summary_tilt_lock_checkbox_preference">Prevents orientation change</string>
	<string name="title_theme_select">Select theme</string>
	<string name="summary_theme_select">Choose light or dark theme</string>
	<string name="title_licenses">Licenses</string>
    <string name="title_license_ffmpeg">Fabrice Bellard - FFmpeg</string>
    <string name="summary_license_ffmpeg">GNU Lesser General Public License (LGPL) version 2.1</string>
    <string name="title_license_lame">www.mp3dev.org - LAME</string>
    <string name="summary_license_lame">GNU Lesser General Public License (LGPL)</string>
	<string name="title_license_vorbis">Xiph.org - Vorbis</string>
    <string name="summary_license_vorbis">BSD 3-Clause</string>
    <string name="title_license_ogg">Xiph.org - OGG</string>
    <string name="summary_license_ogg">BSD 3-Clause</string>
    <string name="title_license_file_chooser">Paul Burke - aFileChooser</string>
    <string name="summary_license_file_chooser">Apache License, Version 2.0</string>
    <string name="overwrite_file_dialog_yes">Yes</string>
     <string name="overwrite_file_dialog_no">No</string>
     <string name="encode_error_dialog_dismiss">Cancel</string>
	
</resources>
